[#348] Sonar fixes.